Fix display issue with answers on small screens

--- a/src/style.css
+++ b/src/style.css
@@ -88,6 +88,7 @@ body {
 .quiz--answers-container {
   display: flex;
   gap: 12px;
+  flex-wrap: wrap;
 }
 
 .quiz--answer {
